# mlops-zoomcamp

./: .gitignore  prefect.yaml  useful_info.txt
.prefect/: flows.json
01-intro/: homework_1.ipynb
03-orchestration/3.3/: orchestrate_pre_prefect.py
03-orchestration/3.4/: orchestrate.py
03-orchestration/3.5/: orchestrate.py
cohorts/2023/02-experiment-tracking/homework/: hpo.py  register_model.py  toy_model.ipynb  train.py
cohorts/2023/03-orchestration/: orchestrate.py
cohorts/2023/04-deployment/homework/: Dockerfile  Pipfile  score.ipynb  score.py  starter.ipynb
cohorts/2023/05-monitoring/: .gitignore  baseline_model_nyc_taxi_data.ipynb  evidently_metrics_calculation.py
cohorts/2023/05-monitoring/dashboards/: data_drift.json
cohorts/2023/05-monitoring/data/: reference.parquet
cohorts/2023/06-best-practices/06-homework/: pyproject.toml
cohorts/2023/06-best-practices/06-homework/06_hw/: batch.py
cohorts/2023/06-best-practices/06-homework/hw/: batch.py
cohorts/2023/06-best-practices/06-homework/tests/: prepare_data_test.py
notebooks/01-intro/: duration-prediction.ipynb
notebooks/02-expertiment-tracking/: my-duration-prediction.ipynb
notebooks/04-deployment/web-service/: Dockerfile  Pipfile  duration-prediction.ipynb  predict.py  test.py
notebooks/05-monitoring/taxi_monitoring/: taxi-duration-baseline.ipynb
notebooks/05-monitoring/taxi_monitoring/data/: reference.parquet
